; Test executables

(executable
 (name test_resample)
 (modules test_resample)
 (libraries ffmpeg-av ffmpeg-swresample))

(executable
 (name test_info)
 (modules test_info)
 (libraries ffmpeg-av ffmpeg-swresample))

; ============================================
; Standalone tests (no file dependencies)
; ============================================

(rule
 (alias test_list_filters)
 (package ffmpeg)
 (deps (:exe ../examples/list_filters.exe))
 (action (run %{exe})))

(rule
 (alias test_all_codecs)
 (package ffmpeg)
 (deps (:exe ../examples/all_codecs.exe))
 (action (run %{exe})))

(rule
 (alias test_all_channel_layouts)
 (package ffmpeg)
 (deps (:exe ../examples/all_channel_layouts.exe))
 (action (run %{exe})))

(rule
 (alias test_all_bitstream_filters)
 (package ffmpeg)
 (deps (:exe ../examples/all_bitstream_filters.exe))
 (action (run %{exe})))

(rule
 (alias test_hw_encode_device)
 (package ffmpeg)
 (deps (:exe ../examples/hw_encode.exe))
 (action (run %{exe} nvenc.mp4 h264_nvenc device)))

(rule
 (alias test_hw_encode_frame)
 (package ffmpeg)
 (deps (:exe ../examples/hw_encode.exe))
 (action (run %{exe} nvenc.mp4 h264_nvenc frame)))

(rule
 (alias test_interrupt)
 (package ffmpeg)
 (deps (:exe ../examples/interrupt.exe))
 (action (run %{exe})))

(rule
 (alias test_resample)
 (package ffmpeg)
 (deps (:exe test_resample.exe))
 (action (run %{exe})))

(rule
 (alias test_info)
 (package ffmpeg)
 (deps (:exe test_info.exe))
 (action (run %{exe})))

; ============================================
; Encode tests - produce media files
; ============================================

(rule
 (alias test_encode_audio_flac)
 (package ffmpeg)
 (deps (:exe ../examples/encode_audio.exe))
 (action (run %{exe} A4.flac flac)))

(rule
 (alias test_encode_audio_mp2)
 (package ffmpeg)
 (deps (:exe ../examples/encode_audio.exe))
 (action (run %{exe} A4.mp2 mp2)))

(rule
 (alias test_encode_video_ogg)
 (package ffmpeg)
 (deps (:exe ../examples/encode_video.exe))
 (action (run %{exe} video.ogg yuv420p libtheora)))

(rule
 (alias test_encode_video_webm)
 (package ffmpeg)
 (deps (:exe ../examples/encode_video.exe))
 (action (run %{exe} video.webm yuva420p libvpx-vp9)))

(rule
 (alias test_encode_stream_flac)
 (package ffmpeg)
 (deps (:exe ../examples/encode_stream.exe))
 (action (run %{exe} S4.flac flac)))

(rule
 (alias test_encode_stream_mp2)
 (package ffmpeg)
 (deps (:exe ../examples/encode_stream.exe))
 (action (run %{exe} S4.mp2 mp2)))

(rule
 (alias test_encoding)
 (package ffmpeg)
 (deps (:exe ../examples/encoding.exe))
 (action (run %{exe} out.mkv aac mpeg4 ass)))

; ============================================
; Decode/transcode tests - depend on encoded files
; ============================================

(rule
 (alias test_decode_stream_mp3)
 (package ffmpeg)
 (deps
  (:exe ../examples/decode_stream.exe)
  (alias test_encode_audio_flac))
 (action (run %{exe} A4.flac A4.mp3 libmp3lame)))

(rule
 (alias test_decode_stream_ogg)
 (package ffmpeg)
 (deps
  (:exe ../examples/decode_stream.exe)
  (alias test_encode_audio_mp2))
 (action (run %{exe} A4.mp2 A4.ogg libvorbis)))

; ============================================
; Audio decoding tests
; ============================================

(rule
 (alias test_audio_decoding_ogg)
 (package ffmpeg)
 (deps
  (:exe ../examples/audio_decoding.exe)
  (alias test_decode_stream_ogg))
 (action (run %{exe} A4.ogg ogg A4)))

(rule
 (alias test_audio_decoding_mkv)
 (package ffmpeg)
 (deps
  (:exe ../examples/audio_decoding.exe)
  (alias test_encoding))
 (action (run %{exe} out.mkv matroska out)))

; ============================================
; Remuxing test
; ============================================

(rule
 (alias test_remuxing)
 (package ffmpeg)
 (deps
  (:exe ../examples/remuxing.exe)
  (alias test_encoding))
 (action (run %{exe} out.mkv out_remuxed.mp4)))

; ============================================
; Transcode tests
; ============================================

(rule
 (alias test_transcode_aac)
 (package ffmpeg)
 (deps
  (:exe ../examples/transcode_aac.exe)
  (alias test_decode_stream_ogg))
 (action (run %{exe} A4.ogg A4_transcoded.mp4)))

(rule
 (alias test_transcoding)
 (package ffmpeg)
 (deps
  (:exe ../examples/transcoding.exe)
  (alias test_encoding))
 (action (run %{exe} out.mkv out_transcoded.mp4)))

; ============================================
; Decoding test
; ============================================

(rule
 (alias test_decoding)
 (package ffmpeg)
 (deps
  (:exe ../examples/decoding.exe)
  (alias test_encoding))
 (action (run %{exe} out.mkv)))

; ============================================
; FPS test
; ============================================

(rule
 (alias test_fps)
 (package ffmpeg)
 (deps
  (:exe ../examples/fps.exe)
  (alias test_encoding))
 (action (run %{exe} out.mkv out_fps.mp4)))

; ============================================
; Aresample test
; ============================================

(rule
 (alias test_aresample)
 (package ffmpeg)
 (deps
  (:exe ../examples/aresample.exe)
  (alias test_encoding))
 (action (run %{exe} out.mkv out_aresample.mp4)))

; ============================================
; Demuxing/decoding test
; ============================================

(rule
 (alias test_demuxing_decoding)
 (package ffmpeg)
 (deps
  (:exe ../examples/demuxing_decoding.exe)
  (alias test_encoding))
 (action (run %{exe} out.mkv vo.raw ao.raw)))

; ============================================
; Read metadata tests
; ============================================

(rule
 (alias test_read_metadata_flac)
 (package ffmpeg)
 (deps
  (:exe ../examples/read_metadata.exe)
  (alias test_encode_audio_flac)
  (alias test_decode_stream_mp3))
 (action (run %{exe} A4.flac flac A4.mp3 libmp3lame)))

(rule
 (alias test_read_metadata_mp2)
 (package ffmpeg)
 (deps
  (:exe ../examples/read_metadata.exe)
  (alias test_encode_audio_mp2)
  (alias test_decode_stream_ogg))
 (action (run %{exe} A4.mp2 mp2 A4.ogg libvorbis)))

; ============================================
; Combined CI test alias (runs all tests)
; ============================================

(rule
 (alias citest)
 (package ffmpeg)
 (deps
  (alias test_list_filters)
  (alias test_all_codecs)
  (alias test_all_channel_layouts)
  (alias test_all_bitstream_filters)
  (alias test_hw_encode_device)
  (alias test_hw_encode_frame)
  (alias test_encode_audio_flac)
  (alias test_encode_audio_mp2)
  (alias test_encode_video_ogg)
  (alias test_encode_video_webm)
  (alias test_encode_stream_flac)
  (alias test_encode_stream_mp2)
  (alias test_encoding)
  (alias test_decode_stream_mp3)
  (alias test_decode_stream_ogg)
  (alias test_audio_decoding_ogg)
  (alias test_audio_decoding_mkv)
  (alias test_remuxing)
  (alias test_transcode_aac)
  (alias test_transcoding)
  (alias test_decoding)
  (alias test_fps)
  (alias test_aresample)
  (alias test_demuxing_decoding)
  (alias test_read_metadata_flac)
  (alias test_read_metadata_mp2)
  (alias test_interrupt)
  (alias test_resample)
  (alias test_info))
 (action (echo "All tests passed!\n")))
